--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--header-color)
   }
   
   .page-header {
