--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,10 @@ body {
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
-  text-align: center;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   background-color: var(--header-color)
 }
 
@@ -45,7 +45,7 @@ body {
   cursor: pointer;
   background-color: white;
   color: black;
-  border: 2px solid #f27581;
+  border: 3px solid #f27581;
 }
 
 /* ----------Media/Screen Conditions--------- */
