--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,19 @@ body {
   background-color: var(--header-color)
 }
 
+/* ------------Button and link colors---------- */
+
+button:hover,
+button:focus {
+  background-color: #f6871f;
+  text-decoration: underline;
+}
+
 .button-class {
-  background-color: #009D70;
+  /*background-color: #009D70;
   /* Green */
-  border: none;
-  color: #f6871f;
+  /* border: none; */
+  /* color: #f6871f; */
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -45,7 +53,7 @@ body {
   cursor: pointer;
   background-color: white;
   color: black;
-  border: 3px solid #f27581;
+  border: 4px solid #f27581;
 }
 
 /* ----------Media/Screen Conditions--------- */
