--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,13 @@
   --a-visted: #363636;
   --a-active: #f27581;
   --grid-color: #009D70;
-  --font-size: 16px;
 }
 
+html, 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: var(--font-size);
+  font-size: 16px;
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
@@ -25,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: left;
-  background-color: var(--header-color)
+  background-color: #a7dcdf
 }
 
 /* ------------Button and link colors---------- */
@@ -55,6 +55,72 @@ button:focus {
   color: black;
   border: 4px solid #f27581;
 }
+
+/* ----------Modal----------- */
+
+/* html, 
+body {
+  font-family: Arial, sans-serif;
+} */
+
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  /* to show it above other content */
+  z-index: 999; 
+  
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+  
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  /* CSS for modal container - add your own desired CSS styles here */
+  display: block;
+}
+
 
 /* ----------Media/Screen Conditions--------- */
 @media all and (max-width: 500px) {
