--- a/css/styles.css
+++ b/css/styles.css
@@ -21,19 +21,22 @@ body {
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
-  text-align: left;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
   background-color: #a7dcdf
-}
-
+  }
 /* ------------Button and link colors---------- */
+
+.pokemon-list {
+  list-style-type: none;
+}
 
 button:hover,
 button:focus {
   background-color: #f6871f;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .button-class {
@@ -54,6 +57,8 @@ button:focus {
   background-color: white;
   color: black;
   border: 4px solid #f27581;
+  min-width: 200px;
+  text-transform: capitalize;
 }
 
 /* ----------Modal----------- */
